<resources>
    <string name="app_name">DonShy</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="sign_up_fragment_label">Sign up Fragment</string>
    <string name="login_fragment_label">Login Fragment</string>
    <string name="next">Next</string>
    <string name="save">Save</string>

    <string name="start_learning">Let\'s start learning</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="input_user_name">Please input your name</string>
    <string name="input_email">Please input your email</string>
    <string name="input_password">Please input your password</string>
    <string name="input_confirm_password">Please input your password to confirm</string>
    <string name="confirm_password_not_matching">Passwords do not match</string>
    <string name="already_have_account">Already have an account? <u>Login</u></string>
    <string name="error_registration_failed">*Registration failed!!</string>
    <string name="error_verify_email_failed">*Verify email failed</string>
    <string name="verify_email">Send verification email to %s, please verify it </string>
    <string name="welcome">Welcome!</string>
    <string name="let_s_make_english_fun_and_easy_starting_now">Let’s make English fun and easy – starting now!</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Login -->
    <string name="login">Login</string>
    <string name="do_not_have_account">You do not have an account yet? <u>Sign up now</u></string>
    <!--Home -->
    <string name="input_your_words">Input your words</string>
    <string name="input_the_meaning">Input it\'s meaning</string>
    <string name="error_add_words">Cannot add word</string>
    <!--tab layout-->
    <string name="tab_home">Home</string>
    <string name="tab_listening">Listening</string>
    <string name="tab_profile">Listening</string>
    <string name="logout">Log Out</string>
    <string name="input_sentences">Please input words or sentences!</string>
    <string name="translate">Translate</string>
    <!--profile-->
    <string name="avatar">avatar</string>
    <string name="choose_from_gallery">Choose avatar from your Gallery</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="select_avatar">Select Avatar</string>
    <string name="icon_change">icon_change</string>
</resources>